@@ -20,6 +20,7 @@ Incorporated High level prototypes into makefile
 Added logic to catch non-existent input files and report a useful error message
 Added DP! to stage2 forth
 Added EXECUTE to stage2 forth
+Added ABORT to stage2 forth
 Added string print and address to output of High level prototype disassembler
 
 ** Changed
@@ -34,6 +35,8 @@ Fixed 2DUP and ?DUP in stage2 forth
 Swapped TRUE and FALSE values in stage2 forth to match http://lars.nocrew.org/dpans/dpans3.htm#3.1.3
 Adjusted order of comparisions to better match ans
 Stack leak in stage2 forth found and corrected
+Stage2 forth no longer attempts to parse carriage returns
+Stage2 forth now will display and error and clear the stacks in the event of an undefined input
 
 ** Removed
 Removed need for sponge to be used to run webIDE
